Fix CI tests for JDK 21 by adding permission flags
Signed-off-by: danish9039 <danishsiddiqui040@gmail.com>