@@ -22,34 +22,36 @@ import static org.awaitility.Awaitility.await;
 
 public class CassandraDependenciesDockerJobTest extends CassandraDependenciesJobTest {
   private static String dependenciesJobTag() {
-      String tag = System.getenv("SPARK_DEPENDENCIES_JOB_TAG");
-      if (tag == null || tag.isEmpty()) {
-          throw new IllegalStateException(
-              "SPARK_DEPENDENCIES_JOB_TAG environment variable is required but not set. " +
+    String tag = System.getenv("SPARK_DEPENDENCIES_JOB_TAG");
+    if (tag == null || tag.isEmpty()) {
+      throw new IllegalStateException(
+          "SPARK_DEPENDENCIES_JOB_TAG environment variable is required but not set. " +
               "This variable must be set to ensure tests use the locally built Docker image.");
-      }
-      return tag.trim();
+    }
+    return tag.trim();
   }
 
   @Override
   protected void deriveDependencies() {
     System.out.println("::group::🚧 🚧 🚧 CassandraDependenciesDockerJob logs");
     try (GenericContainer<?> sparkDependenciesJob = new GenericContainer<>(
-            DockerImageName.parse("ghcr.io/jaegertracing/spark-dependencies/spark-dependencies:" + dependenciesJobTag()))
-            .withNetwork(network)
-            .withLogConsumer(new LogToConsolePrinter("[spark-dependencies] "))
-            .withEnv("CASSANDRA_KEYSPACE", "jaeger_v1_dc1")
-            .withEnv("CASSANDRA_CONTACT_POINTS", "cassandra") // This should be an address within the docker network
-            .withEnv("CASSANDRA_LOCAL_DC", cassandra.getLocalDatacenter())
-            .withEnv("CASSANDRA_USERNAME", cassandra.getUsername())
-            .withEnv("CASSANDRA_PASSWORD", cassandra.getPassword())
-            .dependsOn(cassandra, jaegerCassandraSchema);){
+        DockerImageName.parse("ghcr.io/jaegertracing/spark-dependencies/spark-dependencies:" + dependenciesJobTag()))
+        .withNetwork(network)
+        .withLogConsumer(new LogToConsolePrinter("[spark-dependencies] "))
+        .withEnv("CASSANDRA_KEYSPACE", "jaeger_v1_dc1")
+        .withEnv("CASSANDRA_CONTACT_POINTS", "cassandra") // This should be an address within the docker network
+        .withEnv("JAVA_OPTS",
+            "--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.nio.cs=ALL-UNNAMED --add-opens=java.base/sun.security.action=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED -Djdk.reflect.useDirectMethodHandle=false")
+        .withEnv("CASSANDRA_LOCAL_DC", cassandra.getLocalDatacenter())
+        .withEnv("CASSANDRA_USERNAME", cassandra.getUsername())
+        .withEnv("CASSANDRA_PASSWORD", cassandra.getPassword())
+        .dependsOn(cassandra, jaegerCassandraSchema);) {
       sparkDependenciesJob.start();
       await("spark-dependencies-job execution")
-              .atMost(3, TimeUnit.MINUTES)
-              .until(() -> !sparkDependenciesJob.isRunning());
+          .atMost(3, TimeUnit.MINUTES)
+          .until(() -> !sparkDependenciesJob.isRunning());
     } finally {
-        System.out.println("::endgroup::");
+      System.out.println("::endgroup::");
     }
   }
 }
